<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tituloHistoricoText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/titulo_historico"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="24dp"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/compartilharButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/btn_compartilhar"
        app:layout_constraintTop_toBottomOf="@id/tituloHistoricoText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/hojeButton"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:text="@string/btn_hoje"
        app:layout_constraintEnd_toStartOf="@id/ultimaSemanaButton"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/compartilharButton" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/todasButton"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/btn_todas"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/ultimaSemanaButton"
        app:layout_constraintTop_toBottomOf="@id/compartilharButton" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/ultimaSemanaButton"
        android:text="@string/ultima_semana"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toStartOf="@+id/todasButton"
        app:layout_constraintStart_toEndOf="@+id/hojeButton"
        app:layout_constraintTop_toBottomOf="@+id/compartilharButton" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/historicoRecyclerView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/hojeButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>
